Fixed text alignment

--- a/source/stylesheets/components/_cards.scss
+++ b/source/stylesheets/components/_cards.scss
@@ -35,7 +35,7 @@
     color: black;
   }
   .icon {
-    justify-content: center;
+    text-align: center;
     padding: 8px;
     h4 {
       font-family: 'Saira Condensed', sans-serif;
